Added test cases and implemented code to test Merge K Lists

--- a/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
+++ b/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
@@ -240,14 +240,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation\n",
+    "---\n",
+    "Nous proposons une solution pour fusionner plusieurs listes triées efficacement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Définition d'une classe pour une liste chaînée simple**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {
     "id": "bn54xrjOa8Ez"
    },
    "outputs": [],
    "source": [
-    "# Definition for singly-linked list.\n",
     "class ListNode:\n",
     "    def __init__(self, val=0, next=None):\n",
     "        self.val = val\n",
@@ -255,70 +270,525 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import heapq\n",
-    "def mergeKLists(lists):\n",
-    "\n",
-    "    heap = []\n",
-    "        \n",
-    "    # Add the head of each list to the heap (only non-empty lists)\n",
-    "    for i, l in enumerate(lists):\n",
-    "        if l:\n",
-    "            heapq.heappush(heap, (l.val, i, l))\n",
-    "        \n",
-    "    # Dummy node to help build the merged linked list\n",
-    "    dummy = ListNode()\n",
-    "    current = dummy\n",
-    "        \n",
-    "    # Extract the smallest element from the heap, and advance that list\n",
-    "    while heap:\n",
-    "        # Pop the smallest element (based on node's value)\n",
-    "        val, i, node = heapq.heappop(heap)\n",
-    "            \n",
-    "        # Add the smallest node to the result list\n",
-    "        current.next = node\n",
-    "        current = current.next\n",
-    "            \n",
-    "        # If there is a next node in the list, add it to the heap\n",
-    "        if node.next:\n",
-    "            heapq.heappush(heap, (node.next.val, i, node.next))\n",
-    "        \n",
-    "    # Return the merged linked list, starting from dummy's next node\n",
-    "    return dummy.next"
+    "**Code**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonction pour fusionner deux listes chaînées triées\n",
+    "def mergeTwoLists(list1, list2):\n",
+    "    # Création d'un nœud fictif pour construire la liste fusionnée\n",
+    "    dummy = ListNode()\n",
+    "    current = dummy\n",
+    "\n",
+    "    # Tant qu'il y a des éléments dans les deux listes\n",
+    "    while list1 and list2:\n",
+    "        # Ajouter le plus petit élément entre list1 et list2 à la liste fusionnée\n",
+    "        if list1.val < list2.val:\n",
+    "            current.next = list1\n",
+    "            list1 = list1.next\n",
+    "        else:\n",
+    "            current.next = list2\n",
+    "            list2 = list2.next\n",
+    "        # Avancer dans la liste fusionnée\n",
+    "        current = current.next\n",
+    "\n",
+    "    # Si une des listes est épuisée, lier le reste de l'autre liste\n",
+    "    if list1:\n",
+    "        current.next = list1\n",
+    "    if list2:\n",
+    "        current.next = list2\n",
+    "\n",
+    "    # Retourner la liste fusionnée à partir du nœud suivant du nœud fictif\n",
+    "    return dummy.next\n",
+    "\n",
+    "# Fonction pour fusionner plusieurs listes chaînées triées\n",
+    "def mergeKLists(lists):\n",
+    "    if not lists:  # Si la liste des listes est vide, retourner None\n",
+    "        return None\n",
+    "\n",
+    "    while len(lists) > 1:\n",
+    "        merged_lists = []\n",
+    "\n",
+    "        # Fusionner les listes deux par deux\n",
+    "        for i in range(0, len(lists), 2):\n",
+    "            list1 = lists[i]\n",
+    "            list2 = lists[i + 1] if i + 1 < len(lists) else None\n",
+    "            merged_lists.append(mergeTwoLists(list1, list2))\n",
+    "        \n",
+    "        # Mettre à jour les listes avec les listes fusionnées\n",
+    "        lists = merged_lists\n",
+    "\n",
+    "    # Retourner la liste fusionnée finale\n",
+    "    return lists[0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test simple\n",
+    "---\n",
+    "Dans ce test simple, nous vérifions que l'algorithme fonctionne avec quelques listes triées basiques."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fonction pour afficher une liste chaînée**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_list(node):\n",
+    "    if not node:\n",
+    "        print(\"[ ]\")\n",
+    "        return\n",
+    "    while node:\n",
+    "        print(node.val, end=\" -> \" if node.next else \"\")\n",
+    "        node = node.next\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exemple d'utilisation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 -> 1 -> 2 -> 3 -> 4 -> 4 -> 5 -> 6\n"
+      "1 -> 1 -> 2 -> 3 -> 3 -> 4 -> 4 -> 5 -> 6 -> 7\n"
      ]
     }
    ],
    "source": [
+    "# l1, l2, l3, l4 doivent toutes être triées.\n",
+    "\n",
     "l1 = ListNode(1, ListNode(4, ListNode(5)))\n",
     "l2 = ListNode(1, ListNode(3, ListNode(4)))\n",
     "l3 = ListNode(2, ListNode(6))\n",
+    "l4 = ListNode(3, ListNode(7))\n",
     "\n",
-    "merged_list = mergeKLists([l1, l2, l3])\n",
-    "\n",
-    "# Function to print the merged linked list\n",
-    "def print_list(node):\n",
-    "    while node:\n",
-    "        print(node.val, end=\" -> \" if node.next else \"\")\n",
-    "        node = node.next\n",
-    "    print()\n",
-    "\n",
+    "merged_list = mergeKLists([l1, l2, l3, l4])\n",
     "# Print the merged list\n",
+    "print_list(merged_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Case\n",
+    "---\n",
+    "Nous utilisons des cas de test définis dans un fichier texte. Cela nous permet de tester plusieurs scénarios de manière structurée."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fonction pour convertir une liste Python en une liste chaînée**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cette fonction prend une liste de valeurs et crée une liste chaînée correspondante\n",
+    "def list_to_linked_list(values):\n",
+    "    dummy = ListNode()\n",
+    "    current = dummy\n",
+    "    for val in values:\n",
+    "        current.next = ListNode(val)\n",
+    "        current = current.next\n",
+    "    return dummy.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fonction pour convertir une liste chaînée en une liste Python**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cette fonction extrait les valeurs d'une liste chaînée et les stocke dans une liste Python\n",
+    "def linked_list_to_list(node):\n",
+    "    result = []\n",
+    "    while node:\n",
+    "        result.append(node.val)\n",
+    "        node = node.next\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fonction pour lire les cas de test à partir d'un fichier**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Le fichier contient les entrées et les sorties attendues pour chaque cas de test\n",
+    "def read_test_cases(file_path):\n",
+    "    test_cases = []\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            line = line.strip()\n",
+    "            # Ignorer les lignes vides ou les commentaires\n",
+    "            if not line or line.startswith(\"#\"):\n",
+    "                continue\n",
+    "            if line.startswith(\"Input:\"):\n",
+    "                # Lire les données d'entrée\n",
+    "                input_data = line.replace(\"Input:\", \"\").strip()\n",
+    "                # Traiter les listes, y compris les listes vides\n",
+    "                lists = [\n",
+    "                    list(map(int, lst.split(','))) if lst.strip() else [] \n",
+    "                    for lst in input_data.split('|')\n",
+    "                ]\n",
+    "            elif line.startswith(\"Expected:\"):\n",
+    "                # Lire les données de sortie attendue\n",
+    "                expected_data = (\n",
+    "                    list(map(int, line.replace(\"Expected:\", \"\").strip().split(','))) \n",
+    "                    if line.replace(\"Expected:\", \"\").strip() \n",
+    "                    else []\n",
+    "                )\n",
+    "                # Ajouter les cas de test dans la liste\n",
+    "                test_cases.append((lists, expected_data))\n",
+    "    return test_cases\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fonction d'évaluation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_function(test_cases):\n",
+    "    # Initialize counters\n",
+    "    total_tests = len(test_cases)\n",
+    "    passed_tests = 0\n",
+    "\n",
+    "    for i, (case, expected) in enumerate(test_cases):\n",
+    "        print(f\"Test Case {i + 1}:\")\n",
+    "        linked_lists = [list_to_linked_list(lst) for lst in case]\n",
+    "        merged_list = mergeKLists(linked_lists)\n",
+    "        result = linked_list_to_list(merged_list)\n",
+    "        expexted_list = list_to_linked_list(expected)\n",
+    "    \n",
+    "        print(\"Result : \")\n",
+    "        print_list(merged_list)\n",
+    "        print(\"Expected:\")\n",
+    "        print_list(merged_list)\n",
+    "\n",
+    "        if result == expected:\n",
+    "            print(\"✅ Test Passed\\n\")\n",
+    "            passed_tests += 1\n",
+    "        else:\n",
+    "            print(\"❌ Test Failed\\n\")\n",
+    "\n",
+    "    # Report results\n",
+    "    if passed_tests == total_tests:\n",
+    "        print(f\"\\033[92mCorrect Answer! Test passed {passed_tests}/{total_tests}\\033[0m\")\n",
+    "    else:\n",
+    "        print(f\"\\033[91mWrong Answer! Test passed {passed_tests}/{total_tests}\\033[0m\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ⚠️ Attention : \n",
+    "\n",
+    "Veuillez noter que pour exécuter correctement la section des **Test Cases**, le fichier de test doit être présent dans le chemin spécifié : `Testcase/KmergedList.txt`. Si ce fichier n'est pas trouvé, la cellule contenant le test ne fonctionnera pas correctement. Cependant, cela **n'affectera pas l'exécution des autres cellules** du notebook, et l'algorithme continuera de fonctionner normalement pour les autres sections. Assurez-vous que le fichier est correctement placé pour éviter toute erreur dans cette section spécifique."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 1:\n",
+      "Result : \n",
+      "1 -> 1 -> 2 -> 3 -> 4 -> 4 -> 5 -> 6\n",
+      "Expected:\n",
+      "1 -> 1 -> 2 -> 3 -> 4 -> 4 -> 5 -> 6\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 2:\n",
+      "Result : \n",
+      "1 -> 1 -> 1 -> 1 -> 2 -> 2\n",
+      "Expected:\n",
+      "1 -> 1 -> 1 -> 1 -> 2 -> 2\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 3:\n",
+      "Result : \n",
+      "-1 -> 0 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 9 -> 10 -> 15\n",
+      "Expected:\n",
+      "-1 -> 0 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 9 -> 10 -> 15\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 4:\n",
+      "Result : \n",
+      "[ ]\n",
+      "Expected:\n",
+      "[ ]\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 5:\n",
+      "Result : \n",
+      "[ ]\n",
+      "Expected:\n",
+      "[ ]\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 6:\n",
+      "Result : \n",
+      "1 -> 1 -> 2 -> 3 -> 4 -> 4 -> 5 -> 6\n",
+      "Expected:\n",
+      "1 -> 1 -> 2 -> 3 -> 4 -> 4 -> 5 -> 6\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 7:\n",
+      "Result : \n",
+      "1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 8\n",
+      "Expected:\n",
+      "1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 8\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 8:\n",
+      "Result : \n",
+      "1 -> 2 -> 3 -> 5 -> 6 -> 10 -> 12 -> 15\n",
+      "Expected:\n",
+      "1 -> 2 -> 3 -> 5 -> 6 -> 10 -> 12 -> 15\n",
+      "✅ Test Passed\n",
+      "\n",
+      "Test Case 9:\n",
+      "Result : \n",
+      "1 -> 2 -> 3 -> 4 -> 5\n",
+      "Expected:\n",
+      "1 -> 2 -> 3 -> 4 -> 5\n",
+      "✅ Test Passed\n",
+      "\n",
+      "\u001b[92mCorrect Answer! Test passed 9/9\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_cases = read_test_cases(\"Testcase/KmergedList.txt\")\n",
+    "evaluate_function(test_cases)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testez votre propre exemple\n",
+    "---\n",
+    "À présent, c'est à vous de jouer ! Entrez votre propre cas de test ci-dessous et voyez comment l'algorithme réagit avec votre exemple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Combien de listes voulez-vous fusionner ?  -3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veuillez entrer un nombre valide.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Combien de listes voulez-vous fusionner ?  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    n = int(input(\"Combien de listes voulez-vous fusionner ? \"))\n",
+    "    if n>=0:\n",
+    "        break\n",
+    "    print(\"Veuillez entrer un nombre valide.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saisissez les éléments de la liste 1 (séparés par des virgules):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saisissez les éléments de la liste 2 (séparés par des virgules):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saisissez les éléments de la liste 3 (séparés par des virgules):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liste vide ajoutée.\n",
+      "Saisissez les éléments de la liste 4 (séparés par des virgules):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saisissez les éléments de la liste 5 (séparés par des virgules):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Résultat de la fusion des listes :\n",
+      "1 -> 2 -> 4 -> 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialiser les listes\n",
+    "user_lists = []\n",
+    "\n",
+    "# Saisie des listes par l'utilisateur\n",
+    "for i in range(1, n + 1):\n",
+    "    print(f\"Saisissez les éléments de la liste {i} (séparés par des virgules):\")\n",
+    "    try:\n",
+    "        user_input = input().strip()\n",
+    "        if not user_input:\n",
+    "            print(\"Liste vide ajoutée.\")\n",
+    "            user_lists.append([])\n",
+    "            continue\n",
+    "            \n",
+    "        # Convertir l'entrée utilisateur en une liste d'entiers\n",
+    "        lst = list(map(int, user_input.split(',')))\n",
+    "\n",
+    "        # Vérifier si la liste est triée\n",
+    "        if lst != sorted(lst):\n",
+    "            print(f\"La liste {i} n'est pas triée. Elle sera triée automatiquement.\")\n",
+    "            lst.sort()\n",
+    "            \n",
+    "        user_lists.append(lst)\n",
+    "    except ValueError:\n",
+    "        print(\"Entrée invalide. Veuillez entrer des nombres séparés par des virgules.\")\n",
+    "\n",
+    "# Convertir les listes en objets de liste chaînée\n",
+    "linked_lists = [list_to_linked_list(lst) for lst in user_lists]\n",
+    "\n",
+    "# Fusionner les listes chaînées\n",
+    "merged_list = mergeKLists(linked_lists)\n",
+    "\n",
+    "# Afficher le résultat final\n",
+    "print(\"\\nRésultat de la fusion des listes :\")\n",
     "print_list(merged_list)"
    ]
   },
@@ -571,14 +1041,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plus de 100 solutions trouvées.\n"
+      "3 solutions trouvées.\n"
      ]
     }
    ],
