Implement permutation algorithm, add test cases, and measure performance

--- a/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
+++ b/AkramChaabnia_AbdelheqMokhtari_mohamedRaoufRazi.ipynb
@@ -899,7 +899,21 @@
    },
    "source": [
     "## 3. Permutation\n",
-    "---"
+    "---\n",
+    "Cette section implémente une fonction récursive pour générer toutes les permutations d'une liste donnée."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation\n",
+    "---\n",
+    "L'implémentation de la fonction permute repose sur une approche récursive pour explorer toutes les permutations possibles d'une liste donnée. L'idée principale est de permuter chaque élément avec tous les autres, en utilisant une technique de recherche en profondeur (DFS, Depth-First Search). Cette méthode fonctionne en modifiant les éléments de la liste en place, ce qui permet d'économiser de la mémoire. À chaque étape, une copie de la liste permutée est ajoutée au résultat final lorsque nous atteignons la fin de la liste. Cette approche garantit que toutes les permutations possibles sont générées efficacement.\n",
+    "\n",
+    "Il est important de noter que pour une liste de taille 𝑛 il existe 𝑛! permutations différentes. Par exemple, pour 𝑛=3, le nombre de permutations est 3!=6 et pour 𝑛=7, il est 7!=5040. \n",
+    "\n",
+    "Le nombre de permutations augmente donc très rapidement avec la taille de la liste, ce qui peut entraîner une augmentation significative du temps de calcul et de l'utilisation de la mémoire."
    ]
   },
   {
@@ -928,8 +942,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test simple\n",
+    "---\n",
+    "Nous validons la fonction avec un test simple et comparons les résultats avec la fonction intégrée de permutations de Python, itertools.permutations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Test simple réussi !\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools  # Utilisé uniquement pour générer les permutations attendues lors des tests, pas dans la solution.\n",
+    "\n",
+    "# Test simple\n",
+    "test_input = [1, 2, 3]\n",
+    "expected = [list(p) for p in itertools.permutations(test_input)]  # Convertir les tuples en listes\n",
+    "\n",
+    "# Générer les permutations avec notre fonction\n",
+    "result = permute(test_input)\n",
+    "\n",
+    "# Vérifier que les deux résultats sont identiques (en triant pour éviter l'ordre différent)\n",
+    "assert sorted(result) == sorted(expected), \"Test simple échoué !\"\n",
+    "print(\"✅ Test simple réussi !\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Case\n",
+    "---\n",
+    "Dans cette section, plusieurs cas de test sont définis directement dans le code en utilisant assert pour valider les résultats."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cas de test\n",
+    "test_cases = [\n",
+    "    ([1], [[1]]),\n",
+    "    ([1, 2], [[1, 2], [2, 1]]),\n",
+    "    ([1, 2, 3], [\n",
+    "        [1, 2, 3], [1, 3, 2], [2, 1, 3],\n",
+    "        [2, 3, 1], [3, 1, 2], [3, 2, 1]\n",
+    "    ]),\n",
+    "]\n",
+    "\n",
+    "# Exécuter les cas de test\n",
+    "for nums, expected in test_cases:\n",
+    "    result = permute(nums)\n",
+    "    assert sorted(result) == sorted(expected), f\"Test échoué pour l'entrée {nums}\"\n",
+    "    print(f\"✅ Test réussi pour l'entrée {nums}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testez la performance\n",
+    "---\n",
+    "Cette section mesure les performances de la fonction pour des listes de grande taille. Elle calcule également le nombre total de permutations générées."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -939,24 +1032,46 @@
    },
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Entrez la taille de la liste (n):  10\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a list of size 10 Generate 3628800 different permutation \n",
-      "Time taken: 5378.24 ms\n"
+      "Une liste de taille 10 génère 3628800 permutations différentes\n",
+      "Temps d'exécution: 5534.55 ms\n"
      ]
     }
    ],
    "source": [
     "import time\n",
-    "# Test the performance\n",
-    "test_input = list(range(10))  # a list from 1 to 9\n",
+    "\n",
+    "# Demander à l'utilisateur la taille de la liste\n",
+    "n = int(input(\"Entrez la taille de la liste (n): \"))\n",
+    "\n",
+    "# Générer une liste de 0 à n-1\n",
+    "test_input = list(range(n))\n",
+    "\n",
+    "# Tester les performances\n",
     "start_time = time.time()\n",
     "result = permute(test_input)\n",
     "end_time = time.time()\n",
     "\n",
-    "# Print the time in milliseconds\n",
-    "print(f\"a list of size {len(test_input)} Generate {len(result)} different permutation \\nTime taken: {(end_time - start_time) * 1000:.2f} ms\")"
+    "# Afficher le résultat\n",
+    "print(f\"Une liste de taille {len(test_input)} génère {len(result)} permutations différentes\")\n",
+    "print(f\"Temps d'exécution: {(end_time - start_time) * 1000:.2f} ms\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette implémentation génère toutes les permutations possibles d'une liste en utilisant une méthode récursive. Les tests simples et les cas personnalisés montrent la précision et la robustesse de la fonction. En testant les performances, nous avons pu mesurer le temps nécessaire pour générer les permutations, qui croît rapidement avec la taille de la liste, reflétant la complexité O(n!)."
    ]
   },
   {
